[gd_scene load_steps=15 format=3 uid="uid://dp1pj2iwweten"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_f6nwj"]
[ext_resource type="FontFile" uid="uid://bkmmwuoo8f2kx" path="res://fonts/PixelifySans-Bold.ttf" id="2_1nsb6"]
[ext_resource type="Texture2D" uid="uid://b4cfimc8pca6h" path="res://sprites/menu-bg1.png" id="2_83avt"]
[ext_resource type="Texture2D" uid="uid://cfnyj3rhn2i5a" path="res://sprites/character-sheets.png" id="3_cbofh"]
[ext_resource type="Texture2D" uid="uid://clawed1cnmih5" path="res://sprites/environment-ui-sheets.png" id="5_p2my1"]
[ext_resource type="AudioStream" uid="uid://bqifchrk8scvm" path="res://audio/close.wav" id="6_1c4wj"]
[ext_resource type="AudioStream" uid="uid://bc7e3un2qkilr" path="res://audio/button.wav" id="6_j0ea3"]
[ext_resource type="AudioStream" uid="uid://sgf8cqv5168w" path="res://audio/8-bit music.mp3" id="8_614qq"]

[sub_resource type="Animation" id="Animation_v4xuy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Key:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(59, 27)]
}

[sub_resource type="Animation" id="Animation_uq6rr"]
resource_name = "flying_character_menu"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(12, 19), Vector2(17, 15), Vector2(62, 19), Vector2(52, 22), Vector2(12, 19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_7b3ls"]
resource_name = "key_flying"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Key:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(59, 27), Vector2(59, 24), Vector2(59, 29), Vector2(59, 27)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mpxpm"]
_data = {
"RESET": SubResource("Animation_v4xuy"),
"flying_character_menu": SubResource("Animation_uq6rr"),
"key_flying": SubResource("Animation_7b3ls")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_v4q8u"]
atlas = ExtResource("3_cbofh")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3xtl"]
atlas = ExtResource("5_p2my1")
region = Rect2(32, 16, 8, 8)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_f6nwj")

[node name="MainMenuBackground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_83avt")
stretch_mode = 2

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
unique_name_in_owner = true
root_node = NodePath("../Character")
libraries = {
"": SubResource("AnimationLibrary_mpxpm")
}
speed_scale = 0.5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Menu"]
unique_name_in_owner = true
root_node = NodePath("../Character")
libraries = {
"": SubResource("AnimationLibrary_mpxpm")
}
speed_scale = 0.5

[node name="Character" type="TextureRect" parent="Menu"]
layout_mode = 0
offset_left = 12.0
offset_top = 19.0
offset_right = 20.0001
offset_bottom = 27.0003
texture = SubResource("AtlasTexture_v4q8u")
flip_h = true

[node name="Key" type="TextureRect" parent="Menu"]
layout_mode = 0
offset_left = 59.0
offset_top = 27.0
offset_right = 67.0
offset_bottom = 35.0
texture = SubResource("AtlasTexture_q3xtl")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
offset_left = 30.0
offset_top = 15.0
offset_right = 133.0
offset_bottom = 107.0
scale = Vector2(0.2, 0.2)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
theme_override_font_sizes/font_size = 16
text = "PLAY"

[node name="Settings" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
theme_override_font_sizes/font_size = 16
text = "SETTINGS"

[node name="Exit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
theme_override_font_sizes/font_size = 16
text = "EXIT"

[node name="MarginContainer2" type="MarginContainer" parent="Menu"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 69.0
offset_bottom = 15.0

[node name="DeathsLabel" type="Label" parent="Menu/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
theme_override_font_sizes/font_size = 4
text = "Deaths: 0"

[node name="SettingsMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsMenu"]
root_node = NodePath("../Character")
libraries = {
"": SubResource("AnimationLibrary_mpxpm")
}
autoplay = "flying_character_menu"
speed_scale = 0.5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="SettingsMenu"]
root_node = NodePath("../Character")
libraries = {
"": SubResource("AnimationLibrary_mpxpm")
}
autoplay = "key_flying"
speed_scale = 0.5

[node name="Character" type="TextureRect" parent="SettingsMenu"]
layout_mode = 0
offset_left = 12.0
offset_top = 19.0
offset_right = 20.0001
offset_bottom = 27.0001
texture = SubResource("AtlasTexture_v4q8u")
flip_h = true

[node name="Key" type="TextureRect" parent="SettingsMenu"]
layout_mode = 0
offset_left = 59.0
offset_top = 27.0
offset_right = 67.0
offset_bottom = 35.0
texture = SubResource("AtlasTexture_q3xtl")

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 1
offset_left = 30.0
offset_top = 11.0
offset_right = 133.0
offset_bottom = 135.0
scale = Vector2(0.2, 0.2)

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 2

[node name="MusicLabel" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Back" type="Button" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("2_1nsb6")
theme_override_font_sizes/font_size = 16
text = "BACK"

[node name="CloseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1c4wj")
bus = &"SFX"

[node name="PressSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_j0ea3")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_614qq")
bus = &"Music"

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="SettingsMenu/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
